[gd_scene load_steps=13 format=2]

[ext_resource path="res://Characters/Enemies/Purple Enemy/PurpleEnemy.gd" type="Script" id=1]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=2]
[ext_resource path="res://Characters/Enemies/Purple Enemy/Purple Goblin.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enemies/Purple Enemy/walk 1.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enemies/Purple Enemy/walk 2.png" type="Texture" id=5]
[ext_resource path="res://Characters/Enemies/Purple Enemy/walk 3.png" type="Texture" id=6]
[ext_resource path="res://Characters/Enemies/Purple Enemy/walk 4.png" type="Texture" id=7]
[ext_resource path="res://Characters/Enemies/Purple Enemy/jump 1.png" type="Texture" id=8]
[ext_resource path="res://Characters/Enemies/Purple Enemy/jump 2.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.71563, 15.3896 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.46031, 14.5729 )

[node name="PurpleEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Low Volume"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.05293, 0.566965 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpCooldown" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1.05293, 0.566965 )
shape = SubResource( 3 )
[connection signal="timeout" from="JumpCooldown" to="." method="_on_JumpCooldown_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
